# dataframe_library_comparison

./: README.md  pyproject.toml
src/: pandas_v1.py  pandas_v2.py  polars_eager.py  polars_lazy.py  pyspark_multi_node.py  pyspark_single_node.py  template_for_new_technolgies.py  time_function.py  trigger_dataframe_technology.ipynb
src/data/: data_simulation.py  generate_and_save_data.ipynb
